--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Manager</title>
+    <meta name="robots" content="noindex" />
+    <title>CMS | The Zoldos Group</title>
 </head>
 <body>
 <!-- Include the script that builds the page and powers Netlify CMS -->
