--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>CMS | The Zoldos Group</title>
 </head>
 <body>
